fixed: animation on mobile screen

--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ form{
     }
     to {
       background-color: white;
-      width: 20px;
+      width: 100%;
      
     }
   }
